--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -127,7 +127,7 @@
 
 .author__avatar {
   display: table-cell;
-  vertical-align: top;
+  vertical-align: middle;
   width: 36px;
   height: 36px;
 
@@ -150,8 +150,9 @@
 
 .author__content {
   display: table-cell;
-  vertical-align: top;
+  vertical-align: middle;
   padding-inline: 15px 25px;
+  padding-top: 15px;
   line-height: 1;
 
   @include breakpoint($large) {
