--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,13 +56,13 @@
           </li>
         </a>
         {%- endif -%}
-        {%- if site.plainwhite.social_links.twitter -%}
+        <!-- {%- if site.plainwhite.social_links.twitter -%}
         <a href="https://twitter.com/{{ site.plainwhite.social_links.twitter }}" target="_blank">
           <li>
             <i class="icon-twitter-squared"></i>
           </li>
         </a>
-        {%- endif -%}
+        {%- endif -%} -->
         {%- if site.plainwhite.social_links.instagram -%}
         <a href="https://instagram.com/{{ site.plainwhite.social_links.instagram }}" target="_blank">
           <li>
